Adds solutions and services

--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -48,6 +48,10 @@
                     <a href="{% url 'home' %}"><img src="{% static 'img/logo-white.png' %}" alt=""></a>
                 </div>
                 <p class="light-text white footer-logo_text">{{ content.descricao_rodape }}</p>
+                <div class="flex">
+                    <img height="60" src="{% static 'img/cert1.png' %}" alt="certificado 1">
+                    <img height="60" src="{% static 'img/cert2.png' %}" alt="certificado 2">
+                </div>
             </div>
             <div class="pre-footer_item flex-column start">
             </div>
