--- a/home/templates/services.html
+++ b/home/templates/services.html
@@ -4,94 +4,22 @@
 {% endblock %}
 {% block content %}
     {% load static %}
+    {% get_media_prefix as media_prefix %}
     <div class="flex bg-light page-title">
         <h2 class="subtitle dark text-center">Soluções e Serviços</h2>
     </div>
     <div class="flex start full-w services-page-list">
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
+        {% for s in services %}
+            <div class="flex start service-page-item">
+                <img src="{{ media_prefix }}{{ s.icon }}" alt="{{ s.name }}">
+                <div class="flex-column start service-page-item_content">
+                    <span class="dark-label big">{{ s.name }}</span>
+                    <ul>
+                        <li style="white-space:pre-wrap;" class="light-text">{{ s.description }}</li>
+                    </ul>
+                </div>
             </div>
-        </div>
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
-        </div>
-        <div class="flex start service-page-item">
-            <i class="fa fa-4x fa-envelope-open-o"></i>
-            <div class="flex-column start service-page-item_content">
-                <span class="dark-label big">Web Design</span>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
-        </div>
+        {% endfor %}
     </div>
     <form action="{% url 'contact' %}" class="flex-column full-w">
         <button class="button">Mande uma Mensagem</button>
@@ -99,55 +27,35 @@
     <br>
     <br>
     <br>
-    <div class="flex justify-center bg-light section-title_container">
-        <h2 class="title dark text-center">Serviços Especiais</h2>
-    </div>
-    <div class="flex-column full-w bg-light">
-        <div class="flex special-service full-w">
-            <div class="special-service_img">
-                <div class="special-service_overlay"></div>
-                <img src="{% static 'img/special-service.jpg' %}" alt="">
-            </div>
-            <div class="flex-column start special-service_content">
-                <span class="dark-label big">Web Design</span>
-                <br>
-                <div style="width:30px;height:4px;background:#5bd7c5;margin-bottom:34px;"></div>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
+    {% if solutions %}
+        <div class="flex justify-center bg-light section-title_container">
+            <h2 class="title dark text-center">{{ content.titulo_solucoes }}</h2>
         </div>
-        <div class="flex special-service full-w">
-            <div class="special-service_img">
-                <div class="special-service_overlay"></div>
-                <img src="{% static 'img/special-service.jpg' %}" alt="">
-            </div>
-            <div class="flex-column start special-service_content">
-                <span class="dark-label big">Web Design</span>
-                <br>
-                <div style="width:30px;height:4px;background:#5bd7c5;margin-bottom:34px;"></div>
-                <ul>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                    <li class="light-text">Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet.</li>
-                </ul>
-            </div>
+        <div class="flex-column full-w bg-light">
+            {% for s in solutions %}
+                <div class="flex special-service full-w">
+                    <div class="special-service_img">
+                        <div class="special-service_overlay"></div>
+                        <img src="{{ media_prefix }}{{ s.photo }}" alt="{{ s.name }}">
+                    </div>
+                    <div class="flex-column start special-service_content">
+                        <span class="dark-label big">{{ s.name }}</span>
+                        <br>
+                        <div style="width:30px;height:4px;background:#5bd7c5;margin-bottom:34px;"></div>
+                        <ul>
+                            <li style="white-space:pre-wrap;" class="light-text">{{ s.description }}</li>
+                        </ul>
+                    </div>
+                </div>
+            {% endfor %}
         </div>
-    </div>
-    <div class="full-w bg-light">
-        <form action="{% url 'contact' %}" class="flex-column full-w">
-            <button class="button">Entre em Contato</button>
-        </form>
-        <br>
-        <br>
-        <br>
-    </div>
+        <div class="full-w bg-light">
+            <form action="{% url 'contact' %}" class="flex-column full-w">
+                <button class="button">Entre em Contato</button>
+            </form>
+            <br>
+            <br>
+            <br>
+        </div>
+    {% endif %}
 {% endblock %}
