--- a/home/static/home/styl/projects.styl
+++ b/home/static/home/styl/projects.styl
@@ -27,6 +27,9 @@
     z-index 100
     transform scale(0, 0)
     transition all 400ms ease
+
+.projects-content_item_overlay-icon
+    margin-bottom 25px
     
 .projects-content_item
     &:hover, &:focus
