--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -59,8 +59,7 @@
                 <span class="light-label pre-footer_item_title">{{ content.titulo_contato_rodape }}</span>
                 <span class="light-text white"><span class="fa fa-map-marker"></span> {{ content.endereco_contato }}</span>
                 <span class="light-text white"><span class="fa fa-phone"></span> {{ content.telefone }}</span>
-                <span class="light-text white"><span class="fa fa-envelope-o"></span> {{ content.email }}</span>
-                <br>
+                <span class="light-text white margin-b"><span class="fa fa-envelope-o"></span> {{ content.email }}</span>
                 <a href="{% url 'contact' %}" class="o-button-reverse footer-logo_btn">Contato</a>     
             </div>
             {% load instagram_client %}
