--- a/home/templates/contact.html
+++ b/home/templates/contact.html
@@ -9,12 +9,10 @@
     <div id="contact" class="contact-container flex start full-w">
         <div class="contact-info flex-column start">
             <h2 class="dark text-center" style="text-transform:uppercase;margin-top:0;">{{ content.titulo_contato }}</h2>
-            <span class="light-text">{{ content.texto_contato }}</span>
-            <br>
+            <span class="light-text margin-b">{{ content.texto_contato }}</span>
             <span class="dark detail-text">{{ content.endereco_contato }}</span>
             <span class="dark detail-text">{{ content.endereco_contato_complemento }}</span>
-            <span class="dark detail-text">{{ content.telefone }} / {{ content.email }}</span>
-            <br>
+            <span class="dark detail-text margin-b">{{ content.telefone }} / {{ content.email }}</span>
             <div class="flex contact-info_icons">
                 <a target="_blank" href="https://www.facebook.com/myviewdrones/"><i class="icon-button fa fa-facebook"></i></a>
                 <a target="_blank" href="https://www.instagram.com/myviewbr/"><i class="icon-button fa fa-instagram"></i></a>
