--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -31,7 +31,7 @@
 	<div class="flex-column justify-center description">
 		<div class="description-content">
 			<h4 class="subtitle">{{ content.subtitulo_quem_somos }}</h4>
-			<p style="white-space:pre-wrap;" class="light-text">{{ content.texto_quem_somos }}</p>
+			<p style="white-space:pre-wrap;color:black;" class="light-text">{{ content.texto_quem_somos }}</p>
 			<div class="flex">
 				<img height="80" src="{% static 'img/cert1.png' %}" alt="certificado 1">
 				<img height="80" src="{% static 'img/cert2.png' %}" alt="certificado 2">
