--- a/home/templates/projects.html
+++ b/home/templates/projects.html
@@ -19,9 +19,7 @@
             {% for p in projects %}
                 <div class="projects-content_item" data-groups='["{{ p.category.id }}"]'>
                     <div class="projects-content_item_overlay flex-column justify-center">
-                        <a href="{% url 'project' p.id %}"><i class="icon-button fa fa-search"></i></a>
-                        <br>
-                        <br>
+                        <a class="projects-content_item_overlay-icon" href="{% url 'project' p.id %}"><i class="icon-button fa fa-search"></i></a>
                         <a href="{% url 'project' p.id %}" class="big">{{ p.name|truncatechars:40 }}</a>
                     </div>
                     <img src="{{ media_prefix }}{{ p.coverphoto }}" width="160" alt="">
