--- a/home/templates/courses.html
+++ b/home/templates/courses.html
@@ -13,10 +13,10 @@
     <div class="courses-content flex-column start full-w">
         {% for c in courses %}
             <div class="courses-item full-w">
-                <img height="250" width="250" src="{{ media_prefix }}{{ c.photo }}" alt="">
+                <img style="height:250px;width:250px;" height="250" width="250" src="{{ media_prefix }}{{ c.photo }}" alt="">
                 <div class="flex-column start">
                     <span class="dark-label big">{{ c.name }}</span>
-                    <p class="light-text">{{ c.description }}</p>
+                    <p class="light-text" style="white-space:pre-wrap;">{{ c.description }}</p>
                     <form action="{% url 'contact' %}">
                         <button class="button">Contato</button>
                     </form>
