Adds form handling

--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -211,6 +211,9 @@ a
 .newsletter-container
     padding 5rem 2rem
     flex-wrap wrap
+    form
+        flex-wrap wrap
+        
     
     input
         width 100%
