--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -134,9 +134,17 @@
 			</div>
 		</div>
 	{% endif %}
-	<div id="contact" class="newsletter-container bg-light flex justify-center full-w">
-		<span class="dark-label">{{ content.label_newsletter }}</span>
-		<input type="text" placeholder="Digite o seu email" name="email">
-		<button class="button">Enviar</button>
+	<div id="contact" class="newsletter-container bg-light flex-column full-w">
+		<form action="{% url 'lead' %}" method="POST" class="flex justify-center full-w">
+			<span class="dark-label">{{ content.label_newsletter }}</span>
+			{% csrf_token %}
+			<input type="text" placeholder="Digite o seu email" name="email">
+			<button class="button">Enviar</button>
+		</form>
+		{% if messages %}
+		    {% for message in messages %}
+			    <span class="dark-label">{{ message }}</span>
+		    {% endfor %}
+		{% endif %}
 	</div>
 {% endblock %}
