--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US">
+<html lang="pt-br">
     <head>
         <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
