--- a/home/static/home/css/paraxify.css
+++ b/home/static/home/css/paraxify.css
@@ -1,5 +1,5 @@
-.paraxify {
-  background-attachment: fixed;
-  background-position: center center;
-  background-size: cover;
+@media(min-width: 768px) {
+    .paraxify {
+        background-attachment: fixed;
+    }
 }
