--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -67,7 +67,7 @@ a
     text-align center
 
 .section-title_container
-    height: 252px
+    min-height: 252px
 
 .page-title
     margin-top 100px
