--- a/home/static/home/styl/home/services.styl
+++ b/home/static/home/styl/home/services.styl
@@ -3,6 +3,7 @@
     position: relative
     background-image: url('/static/img/drone.jpg');
     background-position center center
+    background-size cover
 
     .title
         z-index: 100
