--- a/home/templates/base.html
+++ b/home/templates/base.html
@@ -15,6 +15,15 @@
         <script type='text/javascript' src='{% static "home.js" %}'></script>
     </head>     
     <body>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-103390750-1', 'auto');
+            ga('send', 'pageview');
+        </script>
         <header class="header">
             <div class="header-content flex">
                 <div class="header-logo">
