--- a/home/static/home/styl/home/services.styl
+++ b/home/static/home/styl/home/services.styl
@@ -10,7 +10,10 @@
 
 .service-item_container
     flex-wrap: wrap
-    padding: 5rem 0
+    padding: 5rem 0 0
+    
+.service-item_cta
+    margin-bottom 5rem
 
 .service-item
     text-align: center
