--- a/home/static/home/styl/home.styl
+++ b/home/static/home/styl/home.styl
@@ -108,6 +108,12 @@ a
     &.big
         font-size 16px
 
+.dark-text
+    color: darkcolor
+    font-weight: 300
+    font-size: 14px
+    line-height: 26px
+
 .light-text
     color: lightgraycolor
     font-weight: 300
