Flex wrap class

--- a/home/static/home/styl/home/description.styl
+++ b/home/static/home/styl/home/description.styl
@@ -1,7 +1,10 @@
 .description
-    padding: 0 1rem 6rem 3rem
+    padding: 0 1rem 6rem 1rem
 
 .description-content
     max-width: 650px
     .subtitle
         margin-top -5rem
+    img
+        margin-top 20px
+        margin-bottom 20px
