Adds padding to client logos

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -140,9 +140,9 @@
 				<span id="testimonial-control-left" class="fa fa-2x fa-angle-left"></span>
 				<span id="testimonial-control-right" class="fa fa-2x fa-angle-right"></span>
 			</div>
-			<div class="flex justify-center wrap full-w" style="padding:60px 60px 0;">
+			<div class="flex justify-center wrap full-w" style="padding:60px 20% 0;">
 				{% for l in clientlogos %}
-					<img height="80" style="margin:20px;" src="{{ media_prefix }}{{ l.logo }}" alt="">
+					<img height="50" style="margin:20px;" src="{{ media_prefix }}{{ l.logo }}" alt="">
 				{% endfor %}
 			</div>
 		</div>
