Client logo changes

--- a/home/static/home/styl/home/clients.styl
+++ b/home/static/home/styl/home/clients.styl
@@ -24,8 +24,14 @@
     span
         cursor pointer
         margin 0 1rem
-    
+
+.clientlogos
+    padding 60px 5%
+
 @media(min-width:768px)
+    .clientlogos
+        padding 60px 20%
+
     .client
         width 50%
         padding: 2rem 20%
