Prev and next on projects

--- a/home/templates/home.html
+++ b/home/templates/home.html
@@ -126,7 +126,7 @@
 			<h2 class="title dark text-center">{{ content.titulo_depoimentos }}</h2>
 			<div class="flex justify-center wrap full-w clientlogos">
 				{% for l in clientlogos %}
-					<img height="60" style="margin:20px;" src="{{ media_prefix }}{{ l.logo }}" alt="">
+					<img class="clientlogos_img" style="margin:20px;" src="{{ media_prefix }}{{ l.logo }}" alt="">
 				{% endfor %}
 			</div>
 			<div class="clients-container justify-center">
