--- a/home/static/home/styl/home/clients.styl
+++ b/home/static/home/styl/home/clients.styl
@@ -28,10 +28,15 @@
 .clientlogos
     padding 60px 5%
 
+.clientlogos_img
+    height 60px
+
 @media(min-width:768px)
     .clientlogos
         padding 60px 20%
+    .clientlogos_img
+        height 90px
 
     .client
         width 50%
-        padding: 2rem 20%
+        padding: 2rem 15%
