change courses img

--- a/home/static/home/styl/courses.styl
+++ b/home/static/home/styl/courses.styl
@@ -1,8 +1,8 @@
 .courses-top
     margin-top 100px
-    background url('/static/img/drone-courses.jpg')
+    background url('/static/img/curso_site.jpg')
     background-position center center
-    height 300px
+    height 420px
     position relative
     
 .courses-title
